Fix header alignment and styling

--- a/style.css
+++ b/style.css
@@ -10,8 +10,10 @@ h2 {
 }
  
 body {
-    background-color: blanchedalmond; body 
+    background-color: blanchedalmond; 
     font-family: Arial, Helvetica, sans-serif;
     margin: 1em;
   
+}.header {
+    text-align: center;
 }
